--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "querystring": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-responsive": "^9.0.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
