--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.3.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "nanoid": "^4.0.2",
     "next": "13.3.0",
     "querystring": "^0.2.1",
     "react": "18.2.0",
